# phishing-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
specs/001-phishing-detection-portal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phishing-detection-portal/checklists/: requirements.md
specs/001-phishing-detection-portal/contracts/: portal-api.md
src/: config.py
src/agent/: classifier.py  gmail_monitor.py  run_agent.py
src/portal/: app.py
src/portal/static/: app.js  index.html
src/portal/templates/: portal.html
src/storage/: json_store.py
