[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "0.1.0"
description = "Phishing Detector Agent with Web Portal"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.4.0",
    "google-api-python-client>=2.0.0",
    "Flask>=2.0.0",
    "requests>=2.0.0",
]

[tool.vercel]
builder = "python-flask"
routes = [
    { "src": "/", "dest": "src/portal/app.py" },
]
env = [
    "OPENAI_API_KEY",
    "GMAIL_CREDENTIALS_PATH",
    "GMAIL_TOKEN_PATH",
    "PHISHING_RECORDS_PATH",
    "POLL_INTERVAL_SECONDS",
]
